--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
             android:theme="@style/Theme.English"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
-            android:name="edu.aku.hassannaqvi.chese.ui.sections.SectionDActivity"
+            android:name="edu.aku.hassannaqvi.chese.ui.sections.SectionWSG5Activity"
             android:label="@string/sectwo"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.English"
