SectionWSG42Activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         android:theme="@style/Theme.CHESE"
         android:usesCleartextTraffic="true">
 
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.ui.LoginActivity"
             android:exported="true"
@@ -41,26 +42,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.ui.sections.SectionIdentificationActivity"
             android:label="@string/hfinfo"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.English"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.ui.sections.SectionAActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.English"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.ui.sections.SectionWSG5Activity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.English"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.ui.sections.SectionVHC3Activity"
             android:screenOrientation="portrait"
@@ -86,6 +93,12 @@
             android:windowSoftInputMode="adjustResize|stateHidden" />
 
         <activity
+            android:name="edu.aku.hassannaqvi.chese.ui.sections.SectionWSG42Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.English"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+
+        <activity
             android:name="edu.aku.hassannaqvi.chese.ui.sections.SectionVHC2Activity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.English"
@@ -96,26 +109,32 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.English"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.ui.EndingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.English"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.ui.SyncActivity"
             android:label="Download and Upload Data Activity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.core.AndroidManager"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/android:Theme.Holo.Light.DarkActionBar" />
+
         <activity
             android:name="edu.aku.hassannaqvi.chese.ui.TakePhoto"
             android:hardwareAccelerated="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
+
+
     </application>
 
 </manifest>
