--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,9 @@ dependencies {
     implementation 'com.github.AliAzaz:Edittext-Library:2.0.0'
     implementation 'com.github.AliAzaz:AndroidValidatorCrawler:1.0.3'
 
+    // Datepicker
+    implementation 'com.github.BlackBoxVision:datetimepicker-edittext:v0.4.0'
+
     //Apache
     api 'org.apache.commons:commons-lang3:3.12.0'
 
