--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,7 +132,10 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.3'
 
     // Android Debug Database Amitshekhar
-    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+    //debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
+    // Android Database Browser
+    implementation 'com.github.amitshekhariitbhu.Android-Debug-Database:debug-db:v1.0.6'
 
     // Sqlcipher
     implementation "net.zetetic:android-database-sqlcipher:4.4.3"
